--- a/app/src/main/res/layout/item_activity_name.xml
+++ b/app/src/main/res/layout/item_activity_name.xml
@@ -8,9 +8,10 @@
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="#eeeeee"
         android:gravity="center"
         android:padding="8dp"
         android:layout_marginBottom="8dp"
+        android:textAllCaps="false"
         android:textColor="@color/colorAccent"/>
 </LinearLayout>
