--- a/app/src/main/res/xml/click_config.xml
+++ b/app/src/main/res/xml/click_config.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <accessibility-service
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accessibilityEventTypes="typeNotificationStateChanged|typeWindowStateChanged"
-    android:accessibilityFeedbackType="feedbackGeneric"
-    android:accessibilityFlags=""
+    android:accessibilityEventTypes="typeAllMask"
+    android:accessibilityFeedbackType="feedbackAllMask"
+    android:accessibilityFlags="flagIncludeNotImportantViews|flagDefault|flagReportViewIds"
     android:canRetrieveWindowContent="true"
     android:description="@string/click_auto"
     android:notificationTimeout="100"
-    android:packageNames="com.tencent.mm"/>
+    android:packageNames="com.tencent.mm,com.android.packageinstaller,com.lenovo.safecenter,com.google.android.packageinstaller,net.sxkeji.shixinandroiddemo2.release,net.sxkeji.shixinandroiddemo2"/>
