--- a/app/src/main/res/layout/activity_launch_mode.xml
+++ b/app/src/main/res/layout/activity_launch_mode.xml
@@ -36,4 +36,24 @@
         android:layout_height="wrap_content"
         android:text="start singleInstance activity"
         android:textAllCaps="false"/>
+
+    <Button
+        android:id="@+id/btn_intent_filter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:background="@color/black"
+        android:visibility="gone"
+        android:text="start activity with intent action"
+        android:textAllCaps="false"/>
+
+
+    <Button
+        android:id="@+id/btn_intent_chooser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:visibility="gone"
+        android:text="start activity with intent chooser"
+        android:textAllCaps="false"/>
 </LinearLayout>
