--- a/app/src/main/res/xml/click_config.xml
+++ b/app/src/main/res/xml/click_config.xml
@@ -5,6 +5,6 @@
     android:accessibilityFeedbackType="feedbackAllMask"
     android:accessibilityFlags="flagIncludeNotImportantViews|flagDefault|flagReportViewIds"
     android:canRetrieveWindowContent="true"
-    android:description="@string/click_auto"
+    android:description="@string/accessibility_service_description"
     android:notificationTimeout="100"
     android:packageNames="com.tencent.mm,com.android.packageinstaller,com.lenovo.safecenter,com.google.android.packageinstaller,net.sxkeji.shixinandroiddemo2.release,net.sxkeji.shixinandroiddemo2"/>
