change main page

--- a/app/src/main/res/drawable/gradient_green_white.xml
+++ b/app/src/main/res/drawable/gradient_green_white.xml
@@ -26,15 +26,15 @@
 
             <gradient
                 android:angle="180"
-                android:endColor="#eee"
-                android:startColor="#000000"/>
+                android:endColor="#ffeeee"
+                android:startColor="#023320"/>
         </shape>
     </item>
 
 
-    <item>
-        <shape>
-            <solid android:color="#eeeeee"/>
-        </shape>
-    </item>
+    <!--<item>-->
+        <!--<shape>-->
+            <!--<solid android:color="#eeeeee"/>-->
+        <!--</shape>-->
+    <!--</item>-->
 </layer-list>
