--- a/app/src/main/res/layout/activity_annotation.xml
+++ b/app/src/main/res/layout/activity_annotation.xml
@@ -13,6 +13,7 @@
         android:text="this page talks about annotation"/>
 
     <TextView
+        android:id="@+id/tv_bottom_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="author is ? "/>
