--- a/crawler/src/main/res/xml/accessibility_service.xml
+++ b/crawler/src/main/res/xml/accessibility_service.xml
@@ -1,37 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <accessibility-service
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accessibilityEventTypes="typeWindowStateChanged|typeWindowContentChanged"
-    android:accessibilityFeedbackType="feedbackGeneric"
+    android:accessibilityEventTypes="typeAllMask"
+    android:accessibilityFeedbackType="feedbackAllMask"
     android:accessibilityFlags="flagIncludeNotImportantViews"
     android:canRetrieveWindowContent="true"
+    android:description="@string/description"
     android:label="@string/title"
-    android:description="@string/description" />
-<!--
-typeViewClicked
-typeViewLongClicked
-typeViewSelected
-typeViewFocused
-typeViewTextChanged
-typeWindowStateChanged
-typeNotificationStateChanged
-typeViewHoverEnter
-typeViewHoverExit
-typeTouchExplorationGestureStart
-typeTouchExplorationGestureEnd
-typeWindowContentChanged
-typeViewScrolled
-typeViewTextSelectionChanged
-typeAnnouncement
-typeViewAccessibilityFocused
-typeViewAccessibilityFocusCleared
-typeViewTextTraversedAtMovementGranularity
-typeGestureDetectionStart
-typeGestureDetectionEnd
-typeTouchInteractionStart
-typeTouchInteractionEnd
-typeWindowsChanged
-typeContextClicked
-typeAssistReadingContext
-typeAllMask
--->
+    android:packageNames="cn.kooki.app.chezhen"/>
+
+    <!--
+    typeViewClicked
+    typeViewLongClicked
+    typeViewSelected
+    typeViewFocused
+    typeViewTextChanged
+    typeWindowStateChanged
+    typeNotificationStateChanged
+    typeViewHoverEnter
+    typeViewHoverExit
+    typeTouchExplorationGestureStart
+    typeTouchExplorationGestureEnd
+    typeWindowContentChanged
+    typeViewScrolled
+    typeViewTextSelectionChanged
+    typeAnnouncement
+    typeViewAccessibilityFocused
+    typeViewAccessibilityFocusCleared
+    typeViewTextTraversedAtMovementGranularity
+    typeGestureDetectionStart
+    typeGestureDetectionEnd
+    typeTouchInteractionStart
+    typeTouchInteractionEnd
+    typeWindowsChanged
+    typeContextClicked
+    typeAssistReadingContext
+    typeAllMask
+    -->
