--- a/hotfix-sample/src/main/res/values/dimens.xml
+++ b/hotfix-sample/src/main/res/values/dimens.xml
@@ -15,11 +15,7 @@
   -->
 
 <resources>
-    <string name="app_name">mvpcrawler</string>
-    <string name="sell_nice_car">卖好车</string>
-    <string name="yi_jie_hao_che">易捷好车</string>
-    <string name="title">mvpcrawler-数据爬取</string>
-    <string name="description">开启辅助服务后即可模拟点击</string>
-    <string name="app_name_maihaoche">com.maihaoche.bentley</string>
-    <string name="tiao_ban_wang">跳板网</string>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
