--- a/hotfix-sample/src/main/res/values/styles.xml
+++ b/hotfix-sample/src/main/res/values/styles.xml
@@ -15,11 +15,13 @@
   -->
 
 <resources>
-    <string name="app_name">mvpcrawler</string>
-    <string name="sell_nice_car">卖好车</string>
-    <string name="yi_jie_hao_che">易捷好车</string>
-    <string name="title">mvpcrawler-数据爬取</string>
-    <string name="description">开启辅助服务后即可模拟点击</string>
-    <string name="app_name_maihaoche">com.maihaoche.bentley</string>
-    <string name="tiao_ban_wang">跳板网</string>
+
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
 </resources>
