--- a/hook-sample/src/main/res/values/attrs.xml
+++ b/hook-sample/src/main/res/values/attrs.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2017. shixinzhang (shixinzhang2016@gmail.com)
   ~
@@ -15,18 +16,4 @@
   -->
 
 <resources>
-
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    <!--动态布局的 样式属性-->
-    <declare-styleable name="DynamicViewGroup">
-        <!--该布局的唯一标识-->
-        <attr name="uuid" format="string"/>
-    </declare-styleable>
 </resources>
