--- a/hook-sample/src/main/res/layout/screen_title_icons.xml
+++ b/hook-sample/src/main/res/layout/screen_title_icons.xml
@@ -31,94 +31,94 @@ This is the basic layout for a screen, with all of its features enabled.
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="wrap_content"-->
     <!--android:theme="?attr/actionBarTheme"/>-->
-    <RelativeLayout
-        android:id="@android:id/title_container"
-        style="?android:attr/windowTitleBackgroundStyle"
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/windowTitleSize">
-        <!-- The title background has 9px left padding. -->
-        <ImageView
-            android:id="@android:id/left_icon"
-            android:layout_width="16dip"
-            android:layout_height="16dip"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="9dip"
-            android:layout_marginRight="9dip"
-            android:scaleType="fitCenter"
-            android:visibility="gone"/>
+    <!--<RelativeLayout-->
+        <!--android:id="@android:id/title_container"-->
+        <!--style="?android:attr/windowTitleBackgroundStyle"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="?android:attr/windowTitleSize">-->
+        <!--&lt;!&ndash; The title background has 9px left padding. &ndash;&gt;-->
+        <!--<ImageView-->
+            <!--android:id="@android:id/left_icon"-->
+            <!--android:layout_width="16dip"-->
+            <!--android:layout_height="16dip"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:layout_alignParentStart="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginEnd="9dip"-->
+            <!--android:layout_marginRight="9dip"-->
+            <!--android:scaleType="fitCenter"-->
+            <!--android:visibility="gone"/>-->
 
-        <ProgressBar
-            android:id="@+id/progress_circular"
-            style="?android:attr/progressBarStyleSmallTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="6dip"
-            android:layout_marginStart="6dip"
-            android:max="10000"
-            android:visibility="gone"/>
-        <!-- There are 6dip between this and the circular progress on the right, we
-             also make 6dip (with the -3dip margin_left) to the icon on the left or
-             the screen left edge if no icon. This also places our left edge 3dip to
-             the left of the title text left edge. -->
-        <ProgressBar
-            android:id="@+id/progress_horizontal"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="-3dip"
-            android:layout_marginStart="-3dip"
-            android:layout_toEndOf="@android:id/left_icon"
-            android:layout_toLeftOf="@id/progress_circular"
-            android:layout_toRightOf="@android:id/left_icon"
-            android:layout_toStartOf="@id/progress_circular"
-            android:max="10000"
-            android:visibility="gone"/>
+        <!--<ProgressBar-->
+            <!--android:id="@+id/progress_circular"-->
+            <!--style="?android:attr/progressBarStyleSmallTitle"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginLeft="6dip"-->
+            <!--android:layout_marginStart="6dip"-->
+            <!--android:max="10000"-->
+            <!--android:visibility="gone"/>-->
+        <!--&lt;!&ndash; There are 6dip between this and the circular progress on the right, we-->
+             <!--also make 6dip (with the -3dip margin_left) to the icon on the left or-->
+             <!--the screen left edge if no icon. This also places our left edge 3dip to-->
+             <!--the left of the title text left edge. &ndash;&gt;-->
+        <!--<ProgressBar-->
+            <!--android:id="@+id/progress_horizontal"-->
+            <!--style="?android:attr/progressBarStyleHorizontal"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginLeft="-3dip"-->
+            <!--android:layout_marginStart="-3dip"-->
+            <!--android:layout_toEndOf="@android:id/left_icon"-->
+            <!--android:layout_toLeftOf="@id/progress_circular"-->
+            <!--android:layout_toRightOf="@android:id/left_icon"-->
+            <!--android:layout_toStartOf="@id/progress_circular"-->
+            <!--android:max="10000"-->
+            <!--android:visibility="gone"/>-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_toEndOf="@android:id/left_icon"
-            android:layout_toLeftOf="@id/progress_circular"
-            android:layout_toRightOf="@android:id/left_icon"
-            android:layout_toStartOf="@id/progress_circular"
-            android:orientation="horizontal">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_toEndOf="@android:id/left_icon"-->
+            <!--android:layout_toLeftOf="@id/progress_circular"-->
+            <!--android:layout_toRightOf="@android:id/left_icon"-->
+            <!--android:layout_toStartOf="@id/progress_circular"-->
+            <!--android:orientation="horizontal">-->
 
-            <TextView
-                android:id="@android:id/title"
-                style="?android:attr/windowTitleStyle"
-                android:layout_width="0dip"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="2dip"
-                android:layout_marginRight="2dip"
-                android:layout_weight="1"
-                android:background="@color/colorAccent"
-                android:fadingEdge="horizontal"
-                android:gravity="center_vertical"
-                android:scrollHorizontally="true"/>
-            <!-- 2dip between the icon and the title text, if icon is present. -->
-            <ImageView
-                android:id="@android:id/right_icon"
-                android:layout_width="16dip"
-                android:layout_height="16dip"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="0"
-                android:scaleType="fitCenter"
-                android:visibility="gone"
-                />
-        </LinearLayout>
-    </RelativeLayout>
+            <!--<TextView-->
+                <!--android:id="@android:id/title"-->
+                <!--style="?android:attr/windowTitleStyle"-->
+                <!--android:layout_width="0dip"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_marginEnd="2dip"-->
+                <!--android:layout_marginRight="2dip"-->
+                <!--android:layout_weight="1"-->
+                <!--android:background="@color/colorAccent"-->
+                <!--android:fadingEdge="horizontal"-->
+                <!--android:gravity="center_vertical"-->
+                <!--android:scrollHorizontally="true"/>-->
+            <!--&lt;!&ndash; 2dip between the icon and the title text, if icon is present. &ndash;&gt;-->
+            <!--<ImageView-->
+                <!--android:id="@android:id/right_icon"-->
+                <!--android:layout_width="16dip"-->
+                <!--android:layout_height="16dip"-->
+                <!--android:layout_gravity="center_vertical"-->
+                <!--android:layout_weight="0"-->
+                <!--android:scaleType="fitCenter"-->
+                <!--android:visibility="gone"-->
+                <!--/>-->
+        <!--</LinearLayout>-->
+    <!--</RelativeLayout>-->
 
-    <FrameLayout
-        android:id="@android:id/content"
-        android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1"
-        android:foreground="?android:attr/windowContentOverlay"
-        android:foregroundGravity="fill_horizontal|top"/>
+    <!--<FrameLayout-->
+        <!--android:id="@android:id/content"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dip"-->
+        <!--android:layout_weight="1"-->
+        <!--android:foreground="?android:attr/windowContentOverlay"-->
+        <!--android:foregroundGravity="fill_horizontal|top"/>-->
 </LinearLayout>
